# osint

./: .env  .gitignore  Makefile  README.md  __main__.py  alembic.ini  database.db  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 51a85ea60196_create_tables.py
data/sites/: forums.txt  games.txt  other.txt  vh.txt
legacy/nicknamefinder/console/: main.py  money.txt  other.txt  snm.txt
legacy/nicknamefinder/desktop/: readme.txt
legacy/nicknamefinder/desktop/Python/: list.txt  main.py
src/api/: __init__.py  __main__.py
src/api/shemas/: categories.py  links.py  search.py
src/api/views/: categories.py  links.py  search.py
src/core/: config.py  logger.py  messages.py
src/core/helpers/: categories_helper.py  nickname_helper.py
src/db/: database.py  models.py
src/desktop/: __main__.py  app.py
src/frontend/: index.html  script.js  style.css
src/services/: search_engine.py
